--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "open23",
+  "name": "ethonline23",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,24 +7,17 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy": "surge out/ ethonline23.surge.sh"
+    "deploy": "surge out/ distro.surge.sh"
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.17.0",
-    "@dataverse/dataverse-connector": "^1.0.25",
-    "@dataverse/runtime-connector": "^1.0.60",
-    "@dataverse/wallet-provider": "^1.0.12",
-    "@tableland/sdk": "^4.5.1",
     "antd": "^5.8.5",
     "axios": "^1.5.0",
-    "chart.js": "^4.4.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "ethers": "5.7.2",
-    "fuse.js": "^6.6.2",
     "next": "13.4.19",
     "react": "18.2.0",
-    "react-chartkick": "^0.5.3",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "web3.storage": "^4.5.5"
