--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "web3.storage": "^4.5.5"
   },
   "devDependencies": {
-    "@types/react": "18.2.21"
+    "@types/react": "18.2.21",
+    "typescript": "5.2.2"
   }
 }
