--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.17.0",
+    "@lit-protocol/lit-node-client": "^3.0.2",
     "antd": "^5.8.5",
     "axios": "^1.5.0",
     "eslint": "8.48.0",
