--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/cssinjs": "^1.17.0",
     "@lit-protocol/lit-node-client": "^3.0.2",
+    "@wagmi/core": "^1.4.3",
     "antd": "^5.8.5",
     "axios": "^1.5.0",
     "eslint": "8.48.0",
@@ -21,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
+    "viem": "^1.16.5",
     "web3.storage": "^4.5.5"
   },
   "devDependencies": {
