--- a/contracts/package.json
+++ b/contracts/package.json
@@ -1,10 +1,9 @@
 {
   "name": "hardhat-ethonline23",
+  "scripts": {
+    "build": "forge build"
+  },
   "dependencies": {
-    "@ant-design/icons": "^5.2.6",
-    "@openzeppelin/contracts": "^4.9.3",
-    "@wagmi/core": "^1.4.3",
-    "hardhat": "^2.17.2",
-    "viem": "^1.16.5"
+    "@openzeppelin/contracts": "^4.9.3"
   }
 }
