--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "viem": "^1.16.5",
+    "wagmi": "^1.4.3",
     "web3.storage": "^4.5.5"
   },
   "devDependencies": {
