--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "ethers": "5.7.2",
+    "ipfs-http-client": "^60.0.1",
+    "lokijs": "^1.5.12",
     "next": "13.4.19",
     "pino-pretty": "^10.2.3",
     "react": "18.2.0",
