--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/cssinjs": "^1.17.0",
     "@lit-protocol/lit-node-client": "^3.0.2",
+    "@sismo-core/sismo-connect-react": "^0.0.23",
     "@wagmi/core": "^1.4.3",
     "antd": "^5.8.5",
     "axios": "^1.5.0",
