--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "ethers": "5.7.2",
+    "jszip": "^3.10.1",
     "next": "13.4.19",
     "node-fetch": "^3.3.2",
     "react": "18.2.0",
